Working on the z-index and positioning of elements to fix this bug

--- a/less/primo-home.less
+++ b/less/primo-home.less
@@ -13,6 +13,7 @@
       font-size: 18px;
     }
     .make-column(6);
+    position: static;
     p a{
       color: @btn-default-color;
       line-height: inherit;
@@ -28,6 +29,7 @@
   }
   div.EXLHomeBlockContainer1 div.EXLContentBlock2{
     .make-column(6);
+    position: static;
     margin-left: 0;
   }
   h3{
