--- a/less/primo-my-account.less
+++ b/less/primo-my-account.less
@@ -7,6 +7,7 @@
   margin: 0 auto;
   div{
     .make-column(12);
+    position: static;
     .EXLMyAccountTabs{
       margin: 0.5em auto 0 auto;
       li{
