--- a/less/primo-search.less
+++ b/less/primo-search.less
@@ -99,6 +99,7 @@
 .EXLSearchFieldRibbonBrowseSearchLink,
 .EXLSearchFieldRibbonAtoZLink{
   .make-column(2);
+  position: static;
   margin-top: 17px;
   margin-bottom: 17px;
   a, a.EXLSearchFieldRibbonAdvancedTwoLinks{ 
